--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
+    "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-community/datetimepicker": "^7.6.2",
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.18",
+    "@supabase/supabase-js": "^2.49.1",
     "add": "^2.0.6",
     "expo": "~50.0.6",
     "expo-av": "^13.10.6",
+    "expo-constants": "^17.0.8",
     "expo-document-picker": "~11.10.1",
     "expo-file-system": "^16.0.9",
     "expo-image-picker": "^14.7.1",
@@ -45,12 +48,14 @@
     "react-native-render-html": "^6.3.4",
     "react-native-select-dropdown": "^3.4.0",
     "react-native-ui-lib": "^7.16.0",
+    "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^10.0.3",
     "react-native-wheel-color-picker": "^1.3.1",
     "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "react-native-dotenv": "^3.4.11"
   },
   "private": true
 }
